Fix spacing in Current, Card, Search, and TenDay

--- a/css/Current.scss
+++ b/css/Current.scss
@@ -53,9 +53,14 @@
   .high-low-container {
     width: 230px;
   }
+
+  .summary {
+    padding-top: 10px;
+  }
   
   .temp {
     font-weight: 300;
+    padding-left: 5px;
   }
 }
 
