--- a/css/Search.scss
+++ b/css/Search.scss
@@ -38,7 +38,7 @@
   font-size: 24px;
   font-weight: 300;
   color: $dark-gray;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   border: none;
   text-transform: capitalize;
 }
@@ -74,7 +74,7 @@
   }
 
   #search-box {
-    width: 350px;
+    width: 300px;
   }
 }
 
@@ -87,6 +87,7 @@
 
   #search-box {
     font-size: 20px;
+    width: 250px;
   }
 
   .search-bar {
